--- a/DDD_Project.Infrastructure/DDD_Project.Infrastructure.csproj
+++ b/DDD_Project.Infrastructure/DDD_Project.Infrastructure.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\DDD_Project.Domain\DDD_Project.Domain.csproj" />
+    <ProjectReference Include="..\DDD_Project.Application\DDD_Project.Application.csproj" />
+    <ProjectReference Include="DDD_Project.Infrastructure.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
