--- a/DDD_Project.Application/DDD_Project.Application.csproj
+++ b/DDD_Project.Application/DDD_Project.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\DDD_Project.Domain\DDD_Project.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
