--- a/DDD_Project.Infrastructure/DDD_Project.Infrastructure.csproj
+++ b/DDD_Project.Infrastructure/DDD_Project.Infrastructure.csproj
@@ -1,15 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\DDD_Project.Domain\DDD_Project.Domain.csproj" />
-    <ProjectReference Include="..\DDD_Project.Application\DDD_Project.Application.csproj" />
-    <ProjectReference Include="DDD_Project.Infrastructure.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DDD_Project.Application\DDD_Project.Application.csproj" />
+    <ProjectReference Include="..\DDD_Project.Domain\DDD_Project.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
